--- a/assets/scss/components/header/_eman.scss
+++ b/assets/scss/components/header/_eman.scss
@@ -1,10 +1,19 @@
+@font-face {
+    font-family: 'CustomFont';
+    src: url('/assets/fonts/Inter-Regular.ttf') format('truetype');
+}
+
+body {
+    font-family: 'CustomFont', sans-serif;
+}
+
 .heading-1 {
     font-size: 2rem;
 }
 
 .heading-2 {
     font-size: 4.5rem;
-    font-weight: 600;
+    font-weight: 700;
     color: black;
     line-height: 5rem;
 }
@@ -13,7 +22,22 @@
     color: #D7008A !important;
 }
 
+.nav-item.dropdown:hover .dropdown-menu {
+
+    display: unset !important;
+}
+
+.dropdown-item {
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+
+.dropdown-item:hover {
+    color: #D7008A
+}
+
 .button-1 {
+    height: unset !important;
     border-radius: 3.5rem;
     box-shadow: 7px 10px 0 #D7008A;
     border: var(--spacing-2, 2px) solid var(--Text-text-primary, #141C24);
@@ -22,7 +46,50 @@
     padding: 0.7rem 1rem;
     width: 10.25rem;
     font-weight: 500;
+    color: black !important;
+}
 
+.white-text {
+    color: #E4E7EC;
+    opacity: 90%;
+}
+
+.helpsection-questions-answer {
+    color: #344051;
+    margin-top: 1rem;
+    font-weight: 400;
+}
+
+.helpsection-questions-header {
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+
+.helpsection-questions-row {
+    display: flex;
+}
+
+.warning-block {
+    background-color: #FBE6F3;
+    border-radius: 8px;
+    padding: 2rem;
+    width: 50%;
+    margin: auto;
+    margin-top: 2rem;
+}
+
+.helpsection-questions-icons i {
+    position: absolute;
+    right: 0;
+    color: #637083;
+}
+
+.helpsection-questions-block {
+    width: 100%;
+    position: relative;
+    padding: 1rem 0rem;
+    cursor: pointer;
+    border-bottom: 0.5px solid #cdcaca96;
 }
 
 .menu-item {
@@ -93,7 +160,33 @@
     margin-top: 1rem;
 }
 
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    border: 1px solid #8080807d !important;
+    border-radius: 8px;
+}
 
+.form-group span {
+    text-align: left;
+    color: #637083;
+    font-weight: 400;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.form-group .label {
+    margin-bottom: 0.5rem;
+    color: #344051;
+    font-weight: 500;
+    font-size: 0.9rem;
+    text-align: left;
+}
+
+.form-group select {
+    width: 100%;
+}
 
 .journey .heading-2 {
     color: white;
@@ -187,6 +280,7 @@
 .tags {
     display: flex;
     margin-top: 1rem;
+    grid-gap: 0.5rem;
 }
 
 .highlight-list {
@@ -237,6 +331,18 @@
     color: var(--Text-text-tertiary, #637083);
     font-size: 1.25rem;
     font-weight: 400;
+}
+
+.numbering {
+    width: 90px;
+    text-align: center;
+    height: 90px;
+    border-radius: 50%;
+    background-color: #D7008A;
+    color: white;
+    font-size: 3.5rem;
+    font-weight: 800;
+
 }
 
 .salary .text-4 {
@@ -356,6 +462,8 @@
     border: 1px solid #D7008A !important;
     min-width: 10rem;
     font-weight: 600;
+    font-size: 1rem !important;
+    height: unset !important;
 }
 
 .action-buttons button {
@@ -368,20 +476,23 @@ select {
     padding: 0.5rem 1rem;
     width: 60%;
     color: gray;
+    height: 60px;
 }
 
 .Error {
     border: 1px solid red;
 }
 
-input[type=text] {
-    border: 1px solid grey;
-    border-radius: 8px;
-    padding: 0.5rem 1rem;
-}
+// input[type=text] {
+//     border: 1px solid grey;
+//     border-radius: 8px;
+//     padding: 0.5rem 1rem;
+// }
 
 .button-2 {
     color: white;
+    font-size: 1rem !important;
+    height: unset !important;
     padding: 0.7rem 1rem;
     border-radius: 50px;
     border: unset !important;
@@ -393,6 +504,12 @@ input[type=text] {
     border: 1px solid #CED2DA;
     background-color: #F9FAFB;
     border-radius: 8px;
+    font-weight: 400;
+    color: black;
+    font-size: 1rem;
+    height: unset;
+    min-width: 5rem;
+    margin-top: 1rem;
 }
 
 .salary .date-1 {
@@ -421,7 +538,6 @@ input[type=text] {
 @media (min-width: 1200px) {
     .container {
         max-width: 1250px !important;
-        padding: 5rem 0rem;
         position: relative;
         z-index: 999;
     }
@@ -516,9 +632,37 @@ input[type=text] {
     margin-top: 6rem;
 }
 
+.map {
+    margin: auto;
+    width: 80%;
+    margin-top: 3rem;
+}
+
+.contact-info {
+    padding: 2rem;
+    text-align: left;
+    background-color: #202B37;
+    color: white;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    position: relative;
+    padding-bottom: 6rem;
+    height: 100%;
+}
+
+.contact-info i {
+    color: #EB525D
+}
+
+.socialmedia {
+    position: absolute;
+    bottom: 1rem;
+    left: 2rem;
+}
+
 .image-7 {
     position: absolute;
-    bottom: -7rem;
+    bottom: -4rem;
     right: -2rem;
     z-index: -1;
 }
@@ -553,6 +697,35 @@ input[type=text] {
     padding: 2rem;
 }
 
+.heading-8 {
+    font-size: 10rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 132px;
+    letter-spacing: 10;
+}
+
+.business .journey .button-1 {
+    display: unset;
+    margin: unset !important;
+}
+
+.heading-9 {
+    font-size: 15rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 132px;
+    color: #D7008A;
+}
+
+.image-9 {
+    bottom: -10rem;
+    position: absolute;
+    left: -13rem;
+    z-index: -1;
+    opacity: 70%;
+}
+
 @media (max-width: 1200px) {
 
     .image-3,
@@ -585,6 +758,12 @@ input[type=text] {
         padding-top: 25px;
         padding-bottom: 25px;
     }
+
+    .steps {
+        padding-left: unset !important;
+    }
+
+
 
     img {
         margin-top: 2rem;
@@ -622,6 +801,10 @@ input[type=text] {
 
     .welcome .heading-6 {
         padding: unset !important;
+    }
+
+    .map {
+        width: unset !important;
     }
 
     .whyMatensa .block {
@@ -666,13 +849,81 @@ input[type=text] {
     .highlight-item {
         max-width: unset !important;
         flex: unset !important;
+        margin: auto;
+    }
+
+    .container .map .row .col-lg-7 img {
+        padding-left: 15px !important;
+    }
+
+    .button-3 {
+        margin-top: 2rem;
+    }
+
+    .business .image-8 {
+        display: none;
     }
 
     .menu-item {
         width: unset !important;
     }
 
+    .share i {
+        left: 90% !important;
+        top: 15% !important;
+    }
+
+    .action-buttons button {
+        min-width: 7rem;
+    }
+
     .menu-tab {
         display: block !important;
+    }
+
+    .main-div {
+        width: 100% !important;
+    }
+
+    .warning-block {
+        width: 100% !important;
+    }
+
+    .helpsection-questions-icons i {
+        top: 3rem;
+    }
+
+    .heading-9 {
+        font-size: 4rem !important;
+    }
+
+    .heading-8 {
+        font-size: 4rem !important;
+        line-height: unset !important;
+    }
+
+    .mockupimage {
+        display: none;
+    }
+
+    .manageagreements img {
+        margin-left: unset !important;
+        margin-top: unset !important;
+    }
+}
+
+@media (max-width:600px) {
+
+    html,
+    body {
+        font-size: 12px;
+    }
+}
+
+@media (max-width:960px) {
+
+    html,
+    body {
+        font-size: 14px;
     }
 }
