--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -157,11 +157,19 @@ header {
   top: 1.5rem;
   left: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 100000000000;
 }
 
 .ml-auto {
   margin-left: auto !important;
+}
+
+@font-face {
+  font-family: "CustomFont";
+  src: url("/assets/fonts/Inter-Regular.ttf") format("truetype");
+}
+body {
+  font-family: "CustomFont", sans-serif;
 }
 
 .heading-1 {
@@ -170,7 +178,7 @@ header {
 
 .heading-2 {
   font-size: 4.5rem;
-  font-weight: 600;
+  font-weight: 700;
   color: black;
   line-height: 5rem;
 }
@@ -179,7 +187,21 @@ header {
   color: #D7008A !important;
 }
 
+.nav-item.dropdown:hover .dropdown-menu {
+  display: unset !important;
+}
+
+.dropdown-item {
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.dropdown-item:hover {
+  color: #D7008A;
+}
+
 .button-1 {
+  height: unset !important;
   border-radius: 3.5rem;
   box-shadow: 7px 10px 0 #D7008A;
   border: var(--spacing-2, 2px) solid var(--Text-text-primary, #141C24);
@@ -188,6 +210,50 @@ header {
   padding: 0.7rem 1rem;
   width: 10.25rem;
   font-weight: 500;
+  color: black !important;
+}
+
+.white-text {
+  color: #E4E7EC;
+  opacity: 90%;
+}
+
+.helpsection-questions-answer {
+  color: #344051;
+  margin-top: 1rem;
+  font-weight: 400;
+}
+
+.helpsection-questions-header {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.helpsection-questions-row {
+  display: flex;
+}
+
+.warning-block {
+  background-color: #FBE6F3;
+  border-radius: 8px;
+  padding: 2rem;
+  width: 50%;
+  margin: auto;
+  margin-top: 2rem;
+}
+
+.helpsection-questions-icons i {
+  position: absolute;
+  right: 0;
+  color: #637083;
+}
+
+.helpsection-questions-block {
+  width: 100%;
+  position: relative;
+  padding: 1rem 0rem;
+  cursor: pointer;
+  border-bottom: 0.5px solid rgba(205, 202, 202, 0.5882352941);
 }
 
 .menu-item {
@@ -256,6 +322,34 @@ header {
 .block-3 .heading-7:nth-child(2) {
   font-weight: 600;
   margin-top: 1rem;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  border: 1px solid rgba(128, 128, 128, 0.4901960784) !important;
+  border-radius: 8px;
+}
+
+.form-group span {
+  text-align: left;
+  color: #637083;
+  font-weight: 400;
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.form-group .label {
+  margin-bottom: 0.5rem;
+  color: #344051;
+  font-weight: 500;
+  font-size: 0.9rem;
+  text-align: left;
+}
+
+.form-group select {
+  width: 100%;
 }
 
 .journey .heading-2 {
@@ -348,6 +442,7 @@ header {
 .tags {
   display: flex;
   margin-top: 1rem;
+  grid-gap: 0.5rem;
 }
 
 .highlight-list {
@@ -398,6 +493,17 @@ header {
   color: var(--Text-text-tertiary, #637083);
   font-size: 1.25rem;
   font-weight: 400;
+}
+
+.numbering {
+  width: 90px;
+  text-align: center;
+  height: 90px;
+  border-radius: 50%;
+  background-color: #D7008A;
+  color: white;
+  font-size: 3.5rem;
+  font-weight: 800;
 }
 
 .salary .text-4 {
@@ -517,6 +623,8 @@ header {
   border: 1px solid #D7008A !important;
   min-width: 10rem;
   font-weight: 600;
+  font-size: 1rem !important;
+  height: unset !important;
 }
 
 .action-buttons button {
@@ -529,20 +637,17 @@ select {
   padding: 0.5rem 1rem;
   width: 60%;
   color: gray;
+  height: 60px;
 }
 
 .Error {
   border: 1px solid red;
 }
 
-input[type=text] {
-  border: 1px solid grey;
-  border-radius: 8px;
-  padding: 0.5rem 1rem;
-}
-
 .button-2 {
   color: white;
+  font-size: 1rem !important;
+  height: unset !important;
   padding: 0.7rem 1rem;
   border-radius: 50px;
   border: unset !important;
@@ -554,6 +659,12 @@ input[type=text] {
   border: 1px solid #CED2DA;
   background-color: #F9FAFB;
   border-radius: 8px;
+  font-weight: 400;
+  color: black;
+  font-size: 1rem;
+  height: unset;
+  min-width: 5rem;
+  margin-top: 1rem;
 }
 
 .salary .date-1 {
@@ -582,7 +693,6 @@ input[type=text] {
 @media (min-width: 1200px) {
   .container {
     max-width: 1250px !important;
-    padding: 5rem 0rem;
     position: relative;
     z-index: 999;
   }
@@ -675,9 +785,37 @@ input[type=text] {
   margin-top: 6rem;
 }
 
+.map {
+  margin: auto;
+  width: 80%;
+  margin-top: 3rem;
+}
+
+.contact-info {
+  padding: 2rem;
+  text-align: left;
+  background-color: #202B37;
+  color: white;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  position: relative;
+  padding-bottom: 6rem;
+  height: 100%;
+}
+
+.contact-info i {
+  color: #EB525D;
+}
+
+.socialmedia {
+  position: absolute;
+  bottom: 1rem;
+  left: 2rem;
+}
+
 .image-7 {
   position: absolute;
-  bottom: -7rem;
+  bottom: -4rem;
   right: -2rem;
   z-index: -1;
 }
@@ -712,6 +850,35 @@ input[type=text] {
   padding: 2rem;
 }
 
+.heading-8 {
+  font-size: 10rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 132px;
+  letter-spacing: 10;
+}
+
+.business .journey .button-1 {
+  display: unset;
+  margin: unset !important;
+}
+
+.heading-9 {
+  font-size: 15rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 132px;
+  color: #D7008A;
+}
+
+.image-9 {
+  bottom: -10rem;
+  position: absolute;
+  left: -13rem;
+  z-index: -1;
+  opacity: 70%;
+}
+
 @media (max-width: 1200px) {
   .image-3,
   .image-2,
@@ -737,6 +904,9 @@ input[type=text] {
     padding-left: 25px !important;
     padding-top: 25px;
     padding-bottom: 25px;
+  }
+  .steps {
+    padding-left: unset !important;
   }
   img {
     margin-top: 2rem;
@@ -766,6 +936,9 @@ input[type=text] {
   }
   .welcome .heading-6 {
     padding: unset !important;
+  }
+  .map {
+    width: unset !important;
   }
   .whyMatensa .block {
     flex: 100%;
@@ -800,12 +973,64 @@ input[type=text] {
   .highlight-item {
     max-width: unset !important;
     flex: unset !important;
+    margin: auto;
+  }
+  .container .map .row .col-lg-7 img {
+    padding-left: 15px !important;
+  }
+  .button-3 {
+    margin-top: 2rem;
+  }
+  .business .image-8 {
+    display: none;
   }
   .menu-item {
     width: unset !important;
   }
+  .share i {
+    left: 90% !important;
+    top: 15% !important;
+  }
+  .action-buttons button {
+    min-width: 7rem;
+  }
   .menu-tab {
     display: block !important;
+  }
+  .main-div {
+    width: 100% !important;
+  }
+  .warning-block {
+    width: 100% !important;
+  }
+  .helpsection-questions-icons i {
+    top: 3rem;
+  }
+  .heading-9 {
+    font-size: 4rem !important;
+  }
+  .heading-8 {
+    font-size: 4rem !important;
+    line-height: unset !important;
+  }
+  .mockupimage {
+    display: none;
+  }
+  .manageagreements img {
+    margin-left: unset !important;
+    margin-top: unset !important;
+  }
+}
+@media (max-width: 600px) {
+  html,
+  body {
+    font-size: 12px;
+  }
+}
+@media (max-width: 960px) {
+  html,
+  body {
+    font-size: 14px;
   }
 }
 .hero {
