--- a/assets/scss/components/home/_home.scss
+++ b/assets/scss/components/home/_home.scss
@@ -20,7 +20,7 @@
     transform: scale(1.2);
 }
 
-.slider-item-style-1 img {
+.slider-item-style-1 .img img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
@@ -133,4 +133,217 @@
 .matensa-community {
     background: #0A0130;
     width: 100%;
+}
+
+.ban-client-info {
+    overflow: hidden;
+}
+
+
+
+.banImg1 {
+    opacity: 0;
+    transform: translateY(400px) scale(0);
+    vertical-align: bottom;
+}
+
+.bg-img-1 {
+    opacity: 0;
+}
+
+.trans,
+.hero-content h1,
+.hero-content p,
+.hero-content span {
+    opacity: 0;
+}
+
+
+
+.banner-img-1 {
+    overflow: hidden
+}
+
+.ban-client-img img,
+.ban-client-info {
+    transform: scale(0);
+
+}
+
+.ban-client-img img {
+    opacity: 0;
+}
+
+.load-page .ban-client-img img {
+    opacity: 1;
+}
+
+.load-page .ban-clients.active .ban-client-img img,
+.load-page .ban-clients.active .ban-client-info {
+    animation: ini-scale 0.5s forwards;
+}
+
+@keyframes ini-scale {
+    0% {
+        transform: scale(0);
+    }
+
+    50% {
+        transform: scale(1.15);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+.banImg1,
+.bg-img-1,
+.trans,
+.ban-client-img img {
+    transition-delay: 0s;
+    transition-duration: 1s;
+    transition-property: all;
+    transition-timing-function: ease;
+    -webkit-transition-delay: 0s;
+    -webkit-transition-duration: 1s;
+    -webkit-transition-property: all;
+    -webkit-transition-timing-function: ease;
+    -moz-transition-delay: 0s;
+    -moz-transition-duration: 1s;
+    -moz-transition-property: all;
+    -moz-transition-timing-function: ease;
+    -ms-transition-delay: 0s;
+    -ms-transition-duration: 1s;
+    -ms-transition-property: all;
+    -ms-transition-timing-function: ease;
+    -o-transition-delay: 0s;
+    -o-transition-duration: 1s;
+    -o-transition-property: all;
+    -o-transition-timing-function: ease;
+}
+
+.hero-content h1,
+.hero-content p,
+.hero-content span,
+.ban-client-style-1 {
+
+    transition-duration: 1s;
+    transition-property: all;
+    transition-timing-function: ease;
+
+    -webkit-transition-duration: 1s;
+    -webkit-transition-property: all;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-duration: 1s;
+    -moz-transition-property: all;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-duration: 1s;
+    -ms-transition-property: all;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-duration: 1s;
+    -o-transition-property: all;
+    -o-transition-timing-function: ease;
+}
+
+
+
+
+
+
+.load-page .banImg1,
+.load-page .bg-img-1 {
+    transform: translateY(0) scale(1);
+    opacity: 1;
+}
+
+.load-page .hero-content h1,
+.load-page .hero-content p,
+.load-page .hero-content span {
+    opacity: 1;
+}
+
+.ban-clients {
+    display: none;
+}
+
+.ban-clients.active {
+    display: block;
+}
+
+
+.removeItems .ban-client-style-1 {
+    transform: scale(0);
+}
+
+
+// Define the number of classes and the base delay
+$number-of-classes: 10;
+$base-delay: 0.2s;
+
+// Loop to generate classes with incremental delays
+@for $i from 1 through $number-of-classes {
+    .trans-#{$i} {
+        transition-delay: $i * $base-delay;
+    }
+}
+
+@for $i from 1 through $number-of-classes {
+    .anim-#{$i} {
+        animation-delay: $i * $base-delay !important;
+    }
+}
+
+.slider-item-1-content {
+    position: absolute;
+    bottom: 0;
+    width: 80%;
+    left: 10%;
+}
+
+.slider-item-1-card {
+    display: flex;
+
+
+    background: #FFFFFF;
+    border-radius: 1rem;
+    padding: 0.7rem 0.8rem;
+}
+
+.slider-item-1-content h5 {
+    font-size: 1.75rem;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.1;
+    margin-bottom: 1.5rem;
+}
+
+.slider-item-1-card i {
+    margin-right: 0.6rem;
+}
+
+.slider-item-1-card span {}
+
+.slider-item-1-card p b {
+    display: block;
+    font-size: 1rem;
+}
+
+.slider-item-1-card span {
+    font-size: 1.15rem;
+    color: #141C24;
+    margin-left: 0.5rem;
+    font-weight: 500;
+
+}
+
+.slider-item-1-card p {
+    display: block;
+    font-size: 0.9rem;
+    margin-bottom: 0;
+
 }
