--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -157,7 +157,7 @@ p {
     background: linear-gradient(79.77deg, #FFA72E 0%, #DF33A1 100%);
     border-radius: 3rem;
     padding: 0.5rem 2rem !important;
-
+    color: white !important
 }
 
 .btn-style-2 {
