--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -162,7 +162,7 @@ a,
 }
 
 header {
-  position: fixed;
+  position: absolute;
   top: 1.5rem;
   left: 0;
   width: 100%;
@@ -1323,7 +1323,8 @@ select {
 
 .payment-gateway {
   display: flex;
-  max-width: 80%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .payment-gateway span {
