header-active-button

--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -145,7 +145,8 @@ a,
   background: #ffffff;
 }
 
-.nav-link:hover:before {
+.nav-link:hover:before,
+.nav-item.active .nav-link:before {
   width: 60%;
 }
 
