--- a/assets/scss/components/header/_eman.scss
+++ b/assets/scss/components/header/_eman.scss
@@ -459,7 +459,9 @@ body .securepayment .block-slider .block-bl {
     font-size: 1.125rem;
     font-weight: 700;
 }
-
+.apply-now .job-det,.apply-now .heading-4{
+margin-left: -15px;
+}
 .image-1 {
     margin-right: 2rem;
     max-width: 19rem;
@@ -532,10 +534,16 @@ body .securepayment .block-slider .block-bl {
     font-size: 0.6rem;
     color: #637083;
 }
-
+.borderrad{
+    border-radius: 16px;
+}
+.manage{
+    margin-top: -7rem;
+}
 .button-4 {
     color: #D7008A;
     padding: 0.7rem 1rem;
+    margin-right: 1rem;
     border-radius: 50px;
     background-color: white;
     border: 1px solid #D7008A !important;
@@ -559,11 +567,50 @@ select {
     color: gray;
     height: 60px;
 }
-
+.pagyment-gatway-section{
+    background-color:#F2F4F7;
+}
+.footer-section .container{
+    border-bottom:1px solid #8080803d;padding-bottom:1rem
+}
+.marginright{
+    margin-right: 1rem;
+}
+.footer-section .container a img{
+    height: 40px !important;
+}
 .Error {
     border: 1px solid red;
 }
-
+.floatright{
+    float : right;
+}
+.text-right{
+    text-align: right;
+}
+.text-left{
+    text-align: left;
+}
+.join-team .image-9{
+    right: 17rem;bottom: -1rem;left: unset;width: 30%;
+}
+.image-7{
+    bottom: unset;top: 0;
+}
+.terms input{
+    width: 100%;border: 1px solid #80808073 !important;
+    border-radius: 8px ;
+    padding: 1rem;
+    font-size: 1rem !important;
+    height: 50px !important;
+}
+.terms{
+    width: 80%;
+    margin: auto;
+}
+.steps{
+    text-align: left;padding-left: 6rem;
+}
 // input[type=text] {
 //     border: 1px solid grey;
 //     border-radius: 8px;
@@ -620,6 +667,17 @@ select {
 }
 .apply-now select{
     width: 100% !important;
+}
+.width-100{
+    width: 100% !important;
+}
+.image-11{
+    position: absolute;
+    right:-6rem !important
+}
+.image-12{
+    margin-top: 8rem !important;
+    width: 60%;
 }
 .apply-now select {
     border-radius: 8px;
@@ -814,7 +872,28 @@ select {
     display: unset;
     margin: unset !important;
 }
-
+.business{
+    margin-top: 5rem !important;
+}
+.relativeposition{
+    position: relative;
+}
+.image-16{
+    border-radius: 16px;width:30%;position:absolute;    top: -9rem;
+                        right: -1rem;
+}
+.image-15{
+    border-radius: 16px;width: 48%;
+}
+.text-10{
+    font-size: 12rem !important;
+}
+.image-14{
+    border-radius: 16px;
+}
+.image-13{
+    border-radius: 16px;margin-top: 7rem;
+}
 .heading-9 {
     font-size: 15rem;
     font-weight: 700;
@@ -1034,7 +1113,14 @@ select {
 }
 
 
-
+.image-10{
+    position: absolute;
+    z-index: -3;
+    height: 100%;
+    top: 11rem;
+    left:57rem;
+    width: 100%;
+}
 
 .upload-container {
     display: flex;
@@ -1059,3 +1145,5 @@ select {
   .file-input {
     display: none;
   }
+
+ 
