--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -272,6 +272,7 @@ body {
   color: #344051;
   margin-top: 1rem;
   font-weight: 400;
+  text-align: left;
 }
 
 .helpsection-questions-header {
@@ -340,6 +341,34 @@ body {
   margin-top: 3rem;
   list-style-type: none;
   display: flex;
+}
+
+.half-div {
+  width: 50%;
+  margin: auto;
+}
+
+.mapleft {
+  padding-left: 0 !important;
+}
+
+.faqsearch {
+  width: 100%;
+  border: 1px solid rgba(128, 128, 128, 0.4509803922) !important;
+  padding: 1rem;
+  border-radius: 8px !important;
+  font-size: 1.1rem !important;
+  height: 50px !important;
+}
+
+.pr-0 {
+  padding-right: 0 !important;
+}
+
+.mapleft img {
+  width: 100%;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .heading-7 {
@@ -667,6 +696,47 @@ body .securepayment .block-slider .block-bl {
   width: 5%;
   height: 10%;
   margin-top: 0.5rem;
+  margin-right: 1rem;
+}
+
+.growbusiness .main-div {
+  width: 70%;
+  margin: auto;
+}
+
+.image-home-1 {
+  position: absolute;
+  right: 0;
+}
+
+.image-home-2 {
+  position: absolute;
+  left: 0;
+  top: 65rem;
+}
+
+.image-home-3 {
+  position: absolute;
+  right: 0rem;
+  bottom: 45rem;
+}
+
+.image-home-4 {
+  position: absolute;
+  left: 0rem;
+  bottom: 0rem;
+}
+
+.growbusiness .payment-gateway {
+  width: unset !important;
+}
+
+.growbusiness .payment-gateway span {
+  margin-right: 0.5rem;
+}
+
+.salary .col-lg-5 {
+  border-left: 2px solid #D5D5D5;
 }
 
 .job-detail .tag-1 {
@@ -761,6 +831,10 @@ select {
 }
 
 .footer-section .container a img {
+  height: 40px !important;
+}
+
+.header-height {
   height: 40px !important;
 }
 
