--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1549,6 +1549,10 @@ select {
   width: 100%;
 }
 
+.matensa-community .img svg {
+  max-width: 100%;
+}
+
 .ban-client-info {
   overflow: hidden;
 }
@@ -1876,61 +1880,6 @@ select {
   }
 }
 
-input[type=text] {
-  color: #31402A;
-  font-size: 1.7rem;
-  font-weight: 500;
-  width: 100%;
-  font-family: "Barlow", sans-serif;
-  border: 0;
-  border-bottom: 2px #000000 solid;
-  outline: none;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  height: 60px;
-  background: transparent;
-}
-@media (max-width: 800px) {
-  input[type=text] {
-    font-size: 1.4rem;
-    height: 40px;
-  }
-}
-
-button {
-  background: #A4C663;
-  border-radius: 30px;
-  color: #FFFFFF;
-  font-size: 1.875rem;
-  height: 5.625rem;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  outline: none;
-  font-family: "Barlow", sans-serif;
-  border: 0;
-  min-width: 13.8125rem;
-  font-weight: 900;
-  text-transform: uppercase;
-}
-@media (max-width: 800px) {
-  button {
-    height: 3.925rem;
-    min-width: 11.375rem;
-    border-radius: 10px;
-    font-size: 1.4rem;
-  }
-}
-
-::-moz-placeholder {
-  color: #31402A;
-}
-
-::placeholder {
-  color: #31402A;
-}
-
 html,
 body {
   font-size: 16px;
@@ -2116,4 +2065,85 @@ p {
 }
 .logo img {
   height: 8rem;
+}
+
+@media (max-width: 960px) {
+  html,
+  body {
+    font-size: 12px;
+  }
+  .testimonials-slider {
+    position: relative;
+  }
+  .banner-img-1 {
+    position: relative !important;
+  }
+  .navbar-brand img,
+  .hero-bg img {
+    margin-top: 0;
+  }
+  div.hero-content-row {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10000;
+  }
+  .ban-clients .ban-client-style-1 {
+    display: none !important;
+  }
+  .ban-clients .ban-client-style-1:first-child {
+    display: block !important;
+  }
+  .ban-client-info {
+    right: 22% !important;
+  }
+  .hero-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  div.container {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .hero-content {
+    width: 100% !important;
+  }
+  .hero-bg img {
+    height: 100%;
+  }
+  header {
+    top: 0;
+  }
+  .banImg1 {
+    height: auto;
+  }
+  .h1-style-1 {
+    font-size: 6.5vh;
+  }
+  .hero {
+    padding-top: 8rem;
+  }
+  .banImg1 {
+    max-width: 80% !important;
+    margin: 0 auto;
+  }
+  .bg-img-1 span {
+    left: 15px;
+  }
+  .row {
+    margin-left: -15px !important;
+    margin-right: -15px !important;
+  }
+  .ban-clients {
+    transform: scale(0.8);
+    right: 15px;
+    top: 100%;
+  }
+  .slider-item-style-1 .img img {
+    height: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
