--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -223,5 +223,113 @@ p {
 }
 
 
+@media(max-width:960px) {
+
+    html,
+    body {
+        font-size: 12px;
+    }
+
+    .testimonials-slider {
+        position: relative;
+    }
+
+    .banner-img-1 {
+        position: relative !important;
+    }
+
+    .navbar-brand img,
+    .hero-bg img {
+        margin-top: 0;
+    }
+
+    div.hero-content-row {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 10000;
+    }
+
+    .ban-clients .ban-client-style-1 {
+        display: none !important
+    }
+
+    .ban-clients .ban-client-style-1:first-child {
+        display: block !important
+    }
+
+    .ban-client-info {
+
+        right: 22% !important;
+    }
+
+
+    .hero-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    div.container {
+        padding-right: 15px !important;
+        padding-left: 15px !important;
+
+    }
+
+
+    .hero-content {
+        width: 100% !important;
+    }
+
+    .hero-bg img {
+        height: 100%;
+    }
+
+    header {
+        top: 0;
+    }
+
+    .banImg1 {
+        height: auto;
+
+    }
+
+    .h1-style-1 {
+        font-size: 6.5vh;
+    }
+
+    .hero {
+        padding-top: 8rem;
+    }
+
+    .banImg1 {
+        max-width: 80% !important;
+        margin: 0 auto;
+    }
+
+    .bg-img-1 span {
+
+        left: 15px;
+    }
+
+    .row {
+        margin-left: -15px !important;
+        margin-right: -15px !important;
+    }
+
+    .ban-clients {
+        transform: scale(0.8);
+        right: 15px;
+        top: 100%;
+    }
+
+    .slider-item-style-1 .img img {
+        height: auto;
+    }
+}
+
 
 @media (max-width:600px) {}
