--- a/assets/scss/components/header/_header.scss
+++ b/assets/scss/components/header/_header.scss
@@ -94,3 +94,131 @@ header {
 .ml-auto {
     margin-left: auto !important
 }
+
+
+
+
+
+.menu-bar span {
+    width: 100%;
+    height: 2.5px;
+    vertical-align: top;
+    background: #fff;
+    display: inline-block;
+    float: right;
+    margin-bottom: 6px;
+    border-radius: 25%;
+    overflow: hidden;
+}
+
+.menu-bar {
+    width: 4rem;
+    float: right;
+
+    top: 0;
+}
+
+
+
+.navbar-toggler {
+    border: none !important;
+}
+
+.menu-bar span:nth-child(2) {
+    width: 70%;
+}
+
+.menu-mobile-shadow {
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.menu-bar,
+.menu-bar span,
+.menu-mobile-shadow,
+#navbarNav {
+    transition-delay: 0s;
+    transition-duration: .4s;
+    transition-property: all;
+    transition-timing-function: ease;
+    -webkit-transition-delay: 0s;
+    -webkit-transition-duration: .4s;
+    -webkit-transition-property: all;
+    -webkit-transition-timing-function: ease;
+    -moz-transition-delay: 0s;
+    -moz-transition-duration: .4s;
+    -moz-transition-property: all;
+    -moz-transition-timing-function: ease;
+    -ms-transition-delay: 0s;
+    -ms-transition-duration: .4s;
+    -ms-transition-property: all;
+    -ms-transition-timing-function: ease;
+    -o-transition-delay: 0s;
+    -o-transition-duration: .4s;
+    -o-transition-property: all;
+    -o-transition-timing-function: ease
+}
+
+.menu-active .wp-menu-main-menu {
+    left: 0;
+    height: 100vh;
+}
+
+
+.menu-bar span:nth-child(2) {
+    width: 70%
+}
+
+.menu-bar span:nth-child(3) {
+    width: 50%
+}
+
+.menu-active .menu-bar span:nth-child(1) {
+    transform: rotateZ(45deg)
+}
+
+.menu-active .menu-bar span:nth-child(1),
+.menu-bar span:nth-child(2) {
+    position: relative;
+    width: 70% !important
+}
+
+.menu-active .menu-bar span:nth-child(2) {
+    transform: rotateZ(-45deg);
+    top: -8px;
+    width: 70% !important
+}
+
+.menu-active .menu-bar span:nth-child(3) {
+    opacity: 0;
+    transition-delay: 0s;
+    transition-duration: .15s;
+    transition-property: all;
+    transition-timing-function: ease;
+    -webkit-transition-delay: 0s;
+    -webkit-transition-duration: .15s;
+    -webkit-transition-property: all;
+    -webkit-transition-timing-function: ease;
+    -moz-transition-delay: 0s;
+    -moz-transition-duration: .15s;
+    -moz-transition-property: all;
+    -moz-transition-timing-function: ease;
+    -ms-transition-delay: 0s;
+    -ms-transition-duration: .15s;
+    -ms-transition-property: all;
+    -ms-transition-timing-function: ease;
+    -o-transition-delay: 0s;
+    -o-transition-duration: .15s;
+    -o-transition-property: all;
+    -o-transition-timing-function: ease
+}
+
+.menu-active {
+    overflow: hidden;
+}
