--- a/assets/scss/components/header/_eman.scss
+++ b/assets/scss/components/header/_eman.scss
@@ -23,6 +23,9 @@ body {
     font-size: 1.1rem !important;
 }
 
+.footer-section a{
+    color: black;
+}
 .heading-3 {
     color: #D7008A !important;
 }
@@ -167,6 +170,13 @@ body {
     margin-top: 3rem;
     list-style-type: none;
     display: flex;
+}
+.slider-item-1-content h5{
+color: white;
+}
+
+a.button-1{
+    text-align: center;
 }
 .half-div{
     width: 50%;
@@ -621,9 +631,7 @@ select {
 .marginright{
     margin-right: 1rem;
 }
-.footer-section .container a img{
-    height: 40px !important;
-}
+
 .header-height{
     height: 40px !important;
 }
