--- a/assets/scss/components/_components.scss
+++ b/assets/scss/components/_components.scss
@@ -6,5 +6,6 @@
 @import "./testimonials/testimonials";
 @import "./stay-connected/stay-connected";
 @import "./home/home";
+@import "./home/animations";
 // // footers
 @import "./footers/footer-1";
