--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,13 +16,12 @@ $prefix: "cdl";
 html,
 body {
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 body {
-    width: 100%;
-    margin: 0 auto;
+
     font-family: $font;
-    overflow-x: hidden;
 }
 
 .container.mod {
@@ -35,9 +34,9 @@ body {
     box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    width: 0px;
-}
+// ::-webkit-scrollbar {
+//     width: 0px;
+// }
 
 ::-webkit-scrollbar-track {
     background: transparent;
@@ -239,7 +238,7 @@ p {
     html,
     body {
         font-size: 12px;
-        overflow-x: hidden;
+
     }
 
     .home-blk-3-2,
